<resources>
    <string name="app_name">Pharma Support</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="contact">Contact</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
</resources>
